<resources>
    <string name="app_name">Cinema</string>
    <string name="home">home</string>
    <string name="back">back</string>
    <string name="Cinema">Cinema</string>
    <string name="Serial">Serial</string>
    <string name="StarWars">Star Wars</string>
    <string name="Ted">Третий лишний</string>
    <string name="Millers">Мы миллеры</string>
    <string name="Avengers">Мстители</string>
    <string name="Supernatural">Сверхъестественное</string>
    <string name="GameOfThrone">Игра престолов</string>
    <string name="WhiteCollars">Белый воротничок</string>
    <string name="Chernobyl">Чернобыль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="longMovies">120 минут</string>
    <string name="producerAvengers">Энтони Руссо, Джо Руссо</string>
    <string name="producerMillers"> Роусон Маршалл Тёрбер</string>
    <string name="producerTed"> Сет Макфарлейн</string>
    <string name="producerStarWars">Джодж Лукас</string>
    <string name="producerGameOfThrone">Лиза Макатакни, Грег Спенс</string>
    <string name="producerSupernatural">Эрик Крипке</string>
    <string name="producerChernobyl">Энтони Руссо, Джо Руссо</string>
    <string name="producerWhiteCollars">Крэйг Мазин</string>


</resources>